@@ -54,8 +54,9 @@
 
 <p>
   The developers cooperate with the
-  <a href="http://www.linuxdj.com/audio/lad/eventslt2003.php3">Linux
-    Audio Developers</a> group.
+  <a href="http://lac.zkm.de/">Linux
+    Audio Developers</a> group, and are part of the <a
+  href="http://linuxaudio.org/en/index.html">Linux Audio Consortium</a>.
 </p>
 
 <p>
@@ -77,7 +78,7 @@
 <img src="@IMAGES@/lisplogo_warning_128.png" alt="lisp-logo">
 </a>
   
-<a href="http://www.linuxaudiodev.org/">
+<a href="http://lac.zkm.de/">
   <img 
        src="http://www.linuxdj.com/audio/lad/graphics/ladbanner_50.gif"
        alt="Linux Audio Developers Logo"></a>
