@@ -1,3 +1,7 @@
+2005-12-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/about/index.html: update LAD links.
+
 2005-12-02  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* nl/*.html:
